Fix quicklink icons in dark mode
I re-made the icons in Inkscape, kept the background transparent, and
added a 4pt white border, which makes it pop up a bit better in dark
mode. The background is at 90% transparency to be a little darker.

For the documentation logo, I regenerated it from the logo2.py example,
with the following options:

```
fig, ax = make_logo(height_px=233, lw_bars=1.5, lw_grid=1, lw_border=4,
                    rgrid=[1, 3, 5, 7])
ax.patch.set_visible(False)
fig.savefig('logo.svg')
```

and a change to the background `Rectangle` to take `facecolor=[1, 1, 1,
0.9]` instead of `white`.

--- a/docs/_static/css/landing.css
+++ b/docs/_static/css/landing.css
@@ -180,7 +180,7 @@ a.link--offsite::after {
 }
 
 .quicklinks__icon {
-  width: 75px;
+  width: 1in;
   display: block;
   margin-bottom: 10px;
 }
